# kinspot_edgeai

./: .gitignore  README.md  config.py  face_embedding.py  face_recognition.py  generate_embeddings.py  kinspot.py  kinspot_classifier.py  kinspot_embeddings.py  main.py  pre_processor.py  pyproject.toml  utils.py
