[project]
name = "kinspot-edgeai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.6"
dependencies = [
    "accelerate>=1.10.1",
    "deepface>=0.0.99",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pillow-heif>=1.1.1",
    "scikit-learn>=1.6.1",
    "setuptools<82",
    "tf-keras>=2.20.1",
    "torch>=2.8.0",
    "transformers>=4.57.6",
]
